[tool.poetry]
name = "whisper_benchmark_viz"
version = "0.1.0"
description = ""
authors = ["Sean Dearnaley <SeanDearnaley@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
